data/derived/comb/progs/unify/prog6978.ml.out
Characters 110-112:
  in wwhile (gs, b);;
             ^^
Error: This expression has type int -> int
       but an expression was expected of type int -> int * bool
       Type int is not compatible with type int * bool 
